trying to get script to run on build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,14 @@ show_error_codes = true
 warn_no_return = false
 warn_unused_ignores = true
 
+[tool.isort]
+default_section = "THIRDPARTY"
+force_grid_wrap = 0
+include_trailing_comma = true
+known_first_party = ["3mystic_common"]
+line_length = 120
+multi_line_output = 3
+use_parentheses = true
 
 [build-system]
 requires = ["hatchling>=1.11.0"]
@@ -81,3 +89,7 @@ packages = ["src/3mystic_common"]
 
 [tool.hatch.build.sources]
 "src/3mystic_common" = "3mystic_common"
+
+[tool.coverage.paths]
+3mystic_common = ["src", "*/3mystic_common/src"]
+tests = ["tests", "*/3mystic_common/tests"]
