--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,12 @@ classifiers = [
 ]
 dependencies = [
   "colorama; platform_system == 'Windows'",
+  "ruamel.yaml >= 0.17.31",
   "asyncio >= 3.4.3",
   "python-dateutil >= 2.8.2",
   "openpyxl >= 3.0.9",
   "pycryptodomex >= 3.14.1",
   "requests >= 2.27.1",
-  "boto3 >= 1.21.41",
-  "hvac >= 1.0.2",
-  "pyhcl >= 0.4.4",
   "cryptography >= 38.0.3",
   "typing-extensions >= 4.4.0"
 ]
