--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Compiled Packages
+/threemystic_common-*.tar.gz
+/threemystic_common-*.whl
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
